create pictures containers some css styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,36 @@
                     </div>
                 </div>
                 <div class="pictures-container">
-
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/love.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
                 </div>
             </div>
         </section>
