finish pictures-container section html and css

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
                         <P>Designer Web & Multimedia</P>
                     </div>
                     <div class="container-wrapper">
-                        <img src="pictures/love.jpg" alt="foto">
+                        <img src="pictures/blondegirl.jpg" alt="foto">
                         <h4>ANTONELLA</h4>
                         <P>Designer Web & Multimedia</P>
                     </div>
                     <div class="container-wrapper">
-                        <img src="pictures/love.jpg" alt="foto">
+                        <img src="pictures/boy2.jpeg" alt="foto">
                         <h4>ANTONELLA</h4>
                         <P>Designer Web & Multimedia</P>
                     </div>
                     <div class="container-wrapper">
-                        <img src="pictures/love.jpg" alt="foto">
+                        <img src="pictures/girl2.webp" alt="foto">
                         <h4>ANTONELLA</h4>
                         <P>Designer Web & Multimedia</P>
                     </div>
                     <div class="container-wrapper">
-                        <img src="pictures/love.jpg" alt="foto">
+                        <img src="pictures/boy.jpg" alt="foto">
                         <h4>ANTONELLA</h4>
                         <P>Designer Web & Multimedia</P>
                     </div>
                     <div class="container-wrapper">
-                        <img src="pictures/love.jpg" alt="foto">
+                        <img src="pictures/girl.jpg" alt="foto">
                         <h4>ANTONELLA</h4>
                         <P>Designer Web & Multimedia</P>
                     </div>
