create second-container html and css

--- a/index.html
+++ b/index.html
@@ -74,6 +74,87 @@
                 </div>
             </div>
         </section>
+        <section class="second-container">
+            <div>
+                <div class="second-block-wrapper">
+                    <h3>EMPLOIS</h3>
+                    <p>Nous sommes toujours à la recherche de nouveaux talents, capable de faire bien avec rien et encore mieux avec peu. 
+                        Vous pouvez nous contactez sur <a href="#">info@impact.org </a> ou consultez nos offre d’emplois
+                    </p>
+                </div>
+                <div class="blue-block-wrapper">
+                    <div class="blue-block">
+                        <h5>CHARGE.E DE PROJET</h5>
+                        <p>CDD</p>
+                        <div class="icon-h6-wrapper">
+                            <div class="icon-div">
+                                <img src="pictures/icon.png" alt="icon">
+                            </div>
+                            <h6>VOIR L’OFFRE</h6>
+                        </div>
+                    </div>
+                    <div class="blue-block">
+                        <h5>CHARGE.E DE PROJET</h5>
+                        <p>CDD</p>
+                        <div class="icon-h6-wrapper">
+                            <div class="icon-div">
+                                <img src="pictures/icon.png" alt="icon">
+                            </div>
+                            <h6>VOIR L’OFFRE</h6>
+                        </div>
+                    </div>
+                    <div class="blue-block">
+                        <h5>CHARGE.E DE PROJET</h5>
+                        <p>CDD</p>
+                        <div class="icon-h6-wrapper">
+                            <div class="icon-div">
+                                <img src="pictures/icon.png" alt="icon">
+                            </div>
+                            <h6>VOIR L’OFFRE</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="second-block-wrapper-2">
+                    <h2>NOTRE CA</h2>
+                    <p>IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la
+                         communication. Leurs compétences sont mobilisées
+                    </p>
+                    <p>Pour faire parti de notre CA c’est possible ! Contactez-nous sur <a href="#"> info@impact.org </a></p>
+                </div>
+                <div class="pictures-container">
+                    <div class="container-wrapper">
+                        <img src="pictures/love2.jpg" alt="love2">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/girl3.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/blackgirl.jpeg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/ciyvi.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/babe.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                    <div class="container-wrapper">
+                        <img src="pictures/blackgirl2.jpg" alt="foto">
+                        <h4>ANTONELLA</h4>
+                        <P>Designer Web & Multimedia</P>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>   
 </body>
 </html>
