create section 3 and section 4  css styles

--- a/index.html
+++ b/index.html
@@ -116,41 +116,84 @@
                 </div>
                 <div class="second-block-wrapper-2">
                     <h2>NOTRE CA</h2>
-                    <p>IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la
+                    <p class="second-block-p">IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la
                          communication. Leurs compétences sont mobilisées
                     </p>
-                    <p>Pour faire parti de notre CA c’est possible ! Contactez-nous sur <a href="#"> info@impact.org </a></p>
+                    <p class="second-block-p">Pour faire parti de notre CA c’est possible ! Contactez-nous sur <a href="#"> info@impact.org </a></p>
                 </div>
-                <div class="pictures-container">
-                    <div class="container-wrapper">
-                        <img src="pictures/love2.jpg" alt="love2">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
+        <section class="third-container">
+            <div class="pictures-container-2">
+                <div class="container-wrapper">
+                    <img src="pictures/love2.jpg" alt="love2">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="container-wrapper">
+                    <img src="pictures/girl3.jpg" alt="foto">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="container-wrapper">
+                    <img src="pictures/blackgirl.jpeg" alt="foto">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="container-wrapper">
+                    <img src="pictures/ciyvi.jpg" alt="foto">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="container-wrapper">
+                    <img src="pictures/babe.jpg" alt="foto">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="container-wrapper">
+                    <img src="pictures/blackgirl2.jpg" alt="foto">
+                    <h4>ANTONELLA</h4>
+                    <P>Designer Web & Multimedia</P>
+                </div>
+            </div>
+        </section>        
+        <section class="fource-container">
+            <div>
+                <h3>PROJETS RECENTS</h3>
+            </div>
+            <div class="providence-block">
+                <div class="providence-foto">
+                    <img src="pictures/lamuralla1.jpg" alt="lamurala">
+                    <h5>PROVIDENCE</h5>
+                    <p>Terre des Hommes-2017</p>
+                    <h6>WEBSITE/APP</h6>
+                    <div class="icon-p-wrapper">
+                        <div class="icon-box">
+                            <img src="pictures/blueicon.png" alt="icon">
+                        </div>
+                        <p>VOIR LE PROJET</p>
                     </div>
-                    <div class="container-wrapper">
-                        <img src="pictures/girl3.jpg" alt="foto">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="providence-foto">
+                    <img src="pictures/design1.jpg" alt="designe">
+                    <h5>PROVIDENCE</h5>
+                    <p>Terre des Hommes-2017</p>
+                    <h6>WEBSITE/APP</h6>
+                    <div class="icon-p-wrapper">
+                        <div class="icon-box">
+                            <img src="pictures/blueicon.png" alt="icon">
+                        </div>
+                        <p>VOIR LE PROJET</p>
                     </div>
-                    <div class="container-wrapper">
-                        <img src="pictures/blackgirl.jpeg" alt="foto">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
-                    </div>
-                    <div class="container-wrapper">
-                        <img src="pictures/ciyvi.jpg" alt="foto">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
-                    </div>
-                    <div class="container-wrapper">
-                        <img src="pictures/babe.jpg" alt="foto">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
-                    </div>
-                    <div class="container-wrapper">
-                        <img src="pictures/blackgirl2.jpg" alt="foto">
-                        <h4>ANTONELLA</h4>
-                        <P>Designer Web & Multimedia</P>
+                </div>
+                <div class="providence-foto">
+                    <img src="pictures/tringle1.jpg" alt="tringle">
+                    <h5>PROVIDENCE</h5>
+                    <p>Terre des Hommes-2017</p>
+                    <h6>WEBSITE/APP</h6>
+                    <div class="icon-p-wrapper">
+                        <div class="icon-box">
+                            <img src="pictures/blueicon.png" alt="icon">
+                        </div>
+                        <p>VOIR LE PROJET</p>
                     </div>
                 </div>
             </div>
