correcting some css styles

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="flex">
             <a href="#">
                 <div class="logo"></div>
             </a>
-            <ul>
+            <ul class="flex">
                 <li><a href="#">VISION & MISSION</a></li>
                 <li><a href="#">PROJECTS</a></li>
                 <li><a href="#">EQUIPE</a></li>
@@ -25,7 +25,7 @@
     <main>
         <section class="first-container">
             <div>
-                <div class="text-container">
+                <div class="text-container flex">
                     <div class="equipe">
                         <h2>EQUIPE</h2>
                         <p>
@@ -40,7 +40,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="pictures-container">
+                <div class="pictures-container flex">
                     <div class="container-wrapper">
                         <img src="pictures/love.jpg" alt="foto">
                         <h4>ANTONELLA</h4>
@@ -76,17 +76,17 @@
         </section>
         <section class="second-container">
             <div>
-                <div class="second-block-wrapper">
+                <div class="second-block-wrapper flex">
                     <h3>EMPLOIS</h3>
                     <p>Nous sommes toujours à la recherche de nouveaux talents, capable de faire bien avec rien et encore mieux avec peu. 
                         Vous pouvez nous contactez sur <a href="#">info@impact.org </a> ou consultez nos offre d’emplois
                     </p>
                 </div>
-                <div class="blue-block-wrapper">
+                <div class="blue-block-wrapper flex">
                     <div class="blue-block">
                         <h5>CHARGE.E DE PROJET</h5>
                         <p>CDD</p>
-                        <div class="icon-h6-wrapper">
+                        <div class="icon-h6-wrapper flex">
                             <div class="icon-div">
                                 <img src="pictures/icon.png" alt="icon">
                             </div>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="second-block-wrapper-2">
+                <div class="second-block-wrapper-2 flex">
                     <h2>NOTRE CA</h2>
                     <p class="second-block-p">IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la
                          communication. Leurs compétences sont mobilisées
@@ -122,7 +122,7 @@
                     <p class="second-block-p">Pour faire parti de notre CA c’est possible ! Contactez-nous sur <a href="#"> info@impact.org </a></p>
                 </div>
         <section class="third-container">
-            <div class="pictures-container-2">
+            <div class="pictures-container-2 flex">
                 <div class="container-wrapper">
                     <img src="pictures/love2.jpg" alt="love2">
                     <h4>ANTONELLA</h4>
@@ -159,13 +159,13 @@
             <div>
                 <h3>PROJETS RECENTS</h3>
             </div>
-            <div class="providence-block">
+            <div class="providence-block flex">
                 <div class="providence-foto">
                     <img src="pictures/lamuralla1.jpg" alt="lamurala">
                     <h5>PROVIDENCE</h5>
                     <p>Terre des Hommes-2017</p>
                     <h6>WEBSITE/APP</h6>
-                    <div class="icon-p-wrapper">
+                    <div class="icon-p-wrapper flex">
                         <div class="icon-box">
                             <img src="pictures/blueicon.png" alt="icon">
                         </div>
@@ -177,7 +177,7 @@
                     <h5>PROVIDENCE</h5>
                     <p>Terre des Hommes-2017</p>
                     <h6>WEBSITE/APP</h6>
-                    <div class="icon-p-wrapper">
+                    <div class="icon-p-wrapper flex">
                         <div class="icon-box">
                             <img src="pictures/blueicon.png" alt="icon">
                         </div>
@@ -189,7 +189,7 @@
                     <h5>PROVIDENCE</h5>
                     <p>Terre des Hommes-2017</p>
                     <h6>WEBSITE/APP</h6>
-                    <div class="icon-p-wrapper">
+                    <div class="icon-p-wrapper flex">
                         <div class="icon-box">
                             <img src="pictures/blueicon.png" alt="icon">
                         </div>
