create bottom section html and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -195,6 +194,86 @@
                         </div>
                         <p>VOIR LE PROJET</p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="bottom-container">
+            <div class="bottom-block">
+                <div class="navigation">
+                    <div class="navigation-item">
+                        <h4>NOUS CONTACTER</h4>
+                        <ul>
+                            <li>
+                                <a href="#">+32 484 26 77 94</a>
+                            </li>
+                            <li>
+                                <a href="#">+32 484 26 77 94</a>
+                            </li>
+                            <li>
+                                <a href="#">+32 484 26 77 94</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navigation-item">
+                        <h4>NOUS CONTACTER</h4>
+                        <ul>
+                            <li>
+                                <a href="#">IMPACT asbl au 195</a>
+                            </li>
+                            <li>
+                                <a href="#"> Chaussée de Vleurgat</a>
+                            </li>
+                            <li>
+                                <a href="#">1050 Ixelles | Belgique</a> </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navigation-item">
+                        <h4>NOUS CONTACTER</h4>
+                        <ul>
+                            <li>
+                                <a href="#">facebook</a>
+                            </li>
+                            <li>
+                                <a href="#">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#">Vimeo</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navigation-item">
+                        <h4>NOUS CONTACTER</h4>
+                        <ul>
+                            <li>
+                                <a href="#">home</a>
+                            </li>
+                            <li>
+                                <a href="#">Projet</a>
+                            </li>
+                            <li>
+                                <a href="#">Equipe</a>
+                            </li>
+                            <li>
+                                <a href="#">Vision</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h4>S’INSCRIRE A NOTRE NEWSLETTER</h4>
+                    <p>
+                        Que des bonnes nouvelles, aucun spam n’arrivera jamais dans votre boite aux lettres !
+                    </p>
+                    <form action="">
+                        <div class="email-wrapper">
+                            <label for="email">email</label>
+                            <div class="input-wrapper">
+                                <input type="email" placeholder="example@impact.org">
+                                <button>ok</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
