correct some css styles

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="blue-block">
                         <h5>CHARGE.E DE PROJET</h5>
                         <p>CDD</p>
-                        <div class="icon-h6-wrapper">
+                        <div class="icon-h6-wrapper flex">
                             <div class="icon-div">
                                 <img src="pictures/icon.png" alt="icon">
                             </div>
@@ -105,7 +105,7 @@
                     <div class="blue-block">
                         <h5>CHARGE.E DE PROJET</h5>
                         <p>CDD</p>
-                        <div class="icon-h6-wrapper">
+                        <div class="icon-h6-wrapper flex">
                             <div class="icon-div">
                                 <img src="pictures/icon.png" alt="icon">
                             </div>
