correcting some css styles again

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             </div>
         </section>
         <section class="bottom-container">
-            <div class="bottom-block">
-                <div class="navigation">
+            <div class="bottom-block flex">
+                <div class="navigation flex">
                     <div class="navigation-item">
                         <h4>NOUS CONTACTER</h4>
                         <ul>
@@ -229,7 +229,7 @@
                         </ul>
                     </div>
                     <div class="navigation-item">
-                        <h4>NOUS CONTACTER</h4>
+                        <h4>NOUS SUIVRE</h4>
                         <ul>
                             <li>
                                 <a href="#">facebook</a>
@@ -243,7 +243,7 @@
                         </ul>
                     </div>
                     <div class="navigation-item">
-                        <h4>NOUS CONTACTER</h4>
+                        <h4>NAVIGUER</h4>
                         <ul>
                             <li>
                                 <a href="#">home</a>
@@ -267,10 +267,10 @@
                     </p>
                     <form action="">
                         <div class="email-wrapper">
-                            <label for="email">email</label>
-                            <div class="input-wrapper">
+                            <label for="email">Email</label>
+                            <div class="input-wrapper flex">
                                 <input type="email" placeholder="example@impact.org">
-                                <button>ok</button>
+                                <button>OK</button>
                             </div>
                         </div>
                     </form>
