create nos-projets block html and css

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
             </div>
         </section>
         <section class="bottom-container">
+            <div class="nos-projets-container">
+                <div class="nos-icon"></div>
+                <div class="nos-pharagraph">
+                    <p>NOS PROJETS</p>
+                </div>
+            </div>
             <div class="bottom-block flex">
                 <div class="navigation flex">
                     <div class="navigation-item">
