--- a/index.html
+++ b/index.html
@@ -283,6 +283,26 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="footer-wrapper">
+                <div class=" logo-text-block flex">
+                    <div class="logo-wrapper">
+                        <a href="#">
+                            <div class="logo"></div>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="text-wrapper">
+                            Tous droits de reproduction et de diffusion réservés © 2017 IMPACT au 195,
+                             Chaussée de Vleurgat 1050 Ixelles | Belgique
+                        </p>
+                    </div>
+                </div>
+                <div>
+                    <a href="">© 2017 IMPACT | All rights reserved | Site by gnagnagna</a>
+                </div>
+            </div>
+        </footer>
     </main>   
 </body>
 </html>
